--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "多页面应用模板",
+  "name": "wj_temp",
   "version": "1.0.0",
   "description": "使用webpack搭建的多页应用程序工程",
   "main": "index.js",
